--- a/NotebookExamples/WineQualityAnalysis.ipynb
+++ b/NotebookExamples/WineQualityAnalysis.ipynb
@@ -11,13 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on a dataset of 4898 wines containing their quality (target) and 11 characteristics (features). The goal of this notebook is to see how to predict whether a wine is good or not, knowing its features, using random forest. The first section give hit of the features. The second section build a random forest model (using multi-core option integrated in scikit-learn) and try to assess the its precision and biais. Finally a graphical representation of the regression is given."
+    "Based on a dataset of 4898 wines containing their quality (target) and 11 characteristics (features). The goal of this notebook is to see how to predict whether a wine is good or not, knowing its features, using random forest. The first section give hit of the features. The second section build a random forest model (using multi-core option integrated in scikit-learn) and try to assess the its precision and biais. Finally a graphical representation of the regression is given.\n",
+    "\n",
+    "Test de modification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Disable warnings\n",
@@ -274,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Features and target\n",
@@ -295,7 +301,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rf_regre = RandomForestRegressor(n_estimators=1000,n_jobs=-1).fit(trainX, trainY)"
@@ -447,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
