removing a test modif

--- a/NotebookExamples/WineQualityAnalysis.ipynb
+++ b/NotebookExamples/WineQualityAnalysis.ipynb
@@ -11,9 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on a dataset of 4898 wines containing their quality (target) and 11 characteristics (features). The goal of this notebook is to see how to predict whether a wine is good or not, knowing its features, using random forest. The first section give hit of the features. The second section build a random forest model (using multi-core option integrated in scikit-learn) and try to assess the its precision and biais. Finally a graphical representation of the regression is given.\n",
-    "\n",
-    "Test de modification"
+    "Based on a dataset of 4898 wines containing their quality (target) and 11 characteristics (features). The goal of this notebook is to see how to predict whether a wine is good or not, knowing its features, using random forest. The first section give hit of the features. The second section build a random forest model (using multi-core option integrated in scikit-learn) and try to assess the its precision and biais. Finally a graphical representation of the regression is given."
    ]
   },
   {
