Adding Gaussian processes

--- a/NotebookExamples/GaussianProcesses.ipynb
+++ b/NotebookExamples/GaussianProcesses.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Short tutorial inspired by http://katbailey.github.io/post/gaussian-processes-for-dummies/"
+    "Short tutorial inspired by http://katbailey.github.io/post/gaussian-processes-for-dummies/\n",
+    "\n",
+    "Other interesting material (seems intuitive) : https://emtiyaz.github.io/pcml15/gp_by_carlos.pdf"
    ]
   },
   {
